--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@
   <title>HIMO</title>
 </head>
 <body>
-
+  <header class="header">
+    <div class="container">
+      <div class="header__inner">
+        <a class="logo" href="#">
+          <img src="images/logo.png" alt="">
+        </a>
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a class="menu__link" href="#">Описание</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">Характеристики</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link active" href="#">стоимость</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
 </body>
 </html>
