--- a/index.html
+++ b/index.html
@@ -26,12 +26,71 @@
               <a class="menu__link" href="#">Характеристики</a>
             </li>
             <li class="menu__item">
-              <a class="menu__link active" href="#">стоимость</a>
+              <a class="menu__link" href="#">стоимость</a>
             </li>
           </ul>
         </nav>
       </div>
     </div>
   </header>
+
+  <section class="advantages container">
+    <img class="advantages__img" src="images/advantages.jpg" alt="">
+    <div class="advantages__items">
+      <div class="advantages__item">
+        <div class="advantages__item-title">
+          Комфорт и безопасность от HIMO
+        </div>
+        <div class="advantages__item-desc">
+          Электровелосипед HIMO C26 позволит вам быстро и с комфортом добраться до места работы или учебы и не привязываться к городскому транспорту. Велосипед обладает прочной конструкцией и внушительным запасом хода, чтобы стать надежным транспортным средством в современных городских условиях. Легкая и прочная рама, 26-дюймовые колеса и 7-ступенчатая система трансмиссии позволяют уверенно передвигаться не только по асфальтированному дорожному полотну, но и по сложной загородной трассе.
+        </div>
+      </div>
+      <div class="advantages__item">
+        <div class="advantages__item-title">
+          Прочная и легкая рама
+        </div>
+        <div class="advantages__item-desc">
+          Рама HIMO C26 изготовлена из прочного и легкого алюминиевого сплава и отличается высокой надежностью, устойчивостью в аварийных ситуациях, превосходной управляемостью и комфортным передвижением по любой дороге.        </div>
+      </div>
+      <div class="advantages__item">
+        <div class="advantages__item-title">
+          Комбинация режимов для увеличения запаса хода
+        </div>
+        <div class="advantages__item-desc">
+          Электровелосипед HIMO C26 обладает увеличенным запасом хода. Его аккумулятор емкостью 10000 мАч с интеллектуальной системой оптимизации энергопотребления позволяет проехать до 60 км на одном заряде в режиме электропривода. При использовании на некоторых участках пути физической силы дальность хода увеличивается до 100 км. Максимальная скорость передвижения HIMO C26 составляет 25 км/ч.
+        </div>
+      </div>
+      <div class="advantages__item">
+        <div class="advantages__item-title">
+          Надежная трансмиссия
+        </div>
+        <div class="advantages__item-desc">
+          7-ступенчатая система трансмиссии обеспечивает плавное и точное переключение передач, удобное управление скоростью и надежность в работе. Переключая передачи, вы сможете с минимальными усилиями заехать на горку и безопасно скатиться вниз.
+        </div>
+      </div>
+      <div class="advantages__item">
+        <div class="advantages__item-title">
+          Вся информация на ЖК-дисплее
+        </div>
+        <div class="advantages__item-desc">
+          Вся информация на ЖК-дисплее
+          Большой информативный дисплей, вынесенный на рулевую стойку, отображает всю важную информацию о работе HIMO C26 в реальном времени. Вы сможете узнать актуальную скорость передвижения, уровень заряда или пройденный путь. Дисплей защищен от воздействия внешних факторов по стандарту IPX7 и не боится дождя и пыли.
+        </div>
+      </div>
+      <div class="advantages__item">
+        <div class="advantages__item-title">
+          Удобное седло
+        </div>
+        <div class="advantages__item-desc">
+          Электровелосипед HIMO C26 укомплектован велосипедным седлом от известного бренда Selle Royal. Трехмерная гелевая структура седла обеспечивает оптимальную упругость и высокий комфорт во время езды.
+        </div>
+      </div>
+    </div>
+
+
+  </section>
+
+
+
 </body>
 </html>
