add gallery slider

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 
@@ -86,10 +87,25 @@
         </div>
       </div>
     </div>
-
-
   </section>
 
+  <div class="gallery container">
+    <div class="gallery-slider">
+      <div class="gallery-slider__item">
+        <img src="images/slider-img-1.jpg" alt="">
+      </div>
+      <div class="gallery-slider__item">
+        <img src="images/slider-img-2.jpg" alt="">
+      </div>
+      <div class="gallery-slider__item">
+        <img src="images/slider-img-3.jpg" alt="">
+      </div>
+    </div>
+  </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="js/main.js"></script>
 
 
 </body>
