--- a/index.html
+++ b/index.html
@@ -89,6 +89,212 @@
     </div>
   </section>
 
+  <div class="specifications container">
+    <div class="specifications__title">
+      Характеристики
+    </div>
+    <div class="specifications__inner">
+      <div class="specifications-table">
+        <div class="specifications-table__item">
+          <div class="specifications-table__head">
+            Общие
+          </div>
+          <div class="specifications-table__body">
+            <div class="specifications-table__body-item">
+              <div class="specifications-table__col">
+                Производитель
+              </div>
+              <div class="specifications-table__col">
+                Xiaomi
+              </div>
+            </div>
+            <div class="specifications-table__body-item">
+              <div class="specifications-table__col">
+                Вид
+              </div>
+              <div class="specifications-table__col">
+                взрослый, дорожный, городской, электровелосипед, алюминиевая рама
+              </div>
+            </div>
+            <div class="specifications-table__body-item">
+              <div class="specifications-table__col">
+                Колеса
+              </div>
+              <div class="specifications-table__col">
+                26, двойной алюминиевый обод
+              </div>
+            </div>
+            <div class="specifications-table__body-item">
+              <div class="specifications-table__col">
+                Электропривод
+              </div>
+              <div class="specifications-table__col">
+                мотор 250W, разгон до 25 км/ч
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="specifications-table__item">
+          <div class="specifications-table__head">
+            амортизация
+          </div>
+          <div class="specifications-table__body">
+            <div class="specifications-table__body-item">
+              <div class="specifications-table__col">
+                Тип амортизации
+              </div>
+              <div class="specifications-table__col">
+                амортизирующая вилка (Hard tail)
+              </div>
+            </div>
+            <div class="specifications-table__body-item">
+              <div class="specifications-table__col">
+                Вилка
+              </div>
+              <div class="specifications-table__col">
+                пружинно-эластомерная
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="specifications-table__item">
+          <div class="specifications-table__head">
+            управление
+          </div>
+          <div class="specifications-table__body">
+            <div class="specifications-table__body-item">
+              <div class="specifications-table__col">
+                Руль
+              </div>
+              <div class="specifications-table__col">
+                изогнутый, регулируемый подъем
+              </div>
+            </div>
+            <div class="specifications-table__body-item">
+              <div class="specifications-table__col">
+                Манетки
+              </div>
+              <div class="specifications-table__col">
+                триггерные однорычажные, Shimano
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="specifications-table__item">
+          <div class="specifications-table__head">
+            характеристика трансмиссии
+          </div>
+          <div class="specifications-table__body">
+            <div class="specifications-table__body-item">
+              <div class="specifications-table__col">
+                Руль
+              </div>
+              <div class="specifications-table__col">
+                изогнутый, регулируемый подъем
+              </div>
+            </div>
+            <div class="specifications-table__body-item">
+              <div class="specifications-table__col">
+                Количество скоростей
+              </div>
+              <div class="specifications-table__col">
+                7
+              </div>
+            </div>
+            <div class="specifications-table__body-item">
+              <div class="specifications-table__col">
+                Педали
+              </div>
+              <div class="specifications-table__col">
+                классические
+              </div>
+            </div>
+            <div class="specifications-table__body-item">
+              <div class="specifications-table__col">
+                Передний переключатель
+              </div>
+              <div class="specifications-table__col">
+                1 звезда
+              </div>
+            </div>
+            <div class="specifications-table__body-item">
+              <div class="specifications-table__col">
+                Задний переключатель
+              </div>
+              <div class="specifications-table__col">
+                Shimano Tourney (прогулочный)
+              </div>
+            </div>
+            <div class="specifications-table__body-item">
+              <div class="specifications-table__col">
+                Кассета
+              </div>
+              <div class="specifications-table__col">
+                7 звезд
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="specifications-table__item">
+          <div class="specifications-table__head">
+            тормоза
+          </div>
+          <div class="specifications-table__body">
+            <div class="specifications-table__body-item">
+              <div class="specifications-table__col">
+                Передний
+              </div>
+              <div class="specifications-table__col">
+                дисковый механический
+              </div>
+            </div>
+            <div class="specifications-table__body-item">
+              <div class="specifications-table__col">
+                Задний
+              </div>
+              <div class="specifications-table__col">
+                дисковый механический
+              </div>
+            </div>
+            <div class="specifications-table__body-item">
+              <div class="specifications-table__col">
+                Готовность к установке дисковых
+              </div>
+              <div class="specifications-table__col">
+                рама, вилка, втулка
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="specifications-table__item">
+          <div class="specifications-table__head">
+            прочее
+          </div>
+          <div class="specifications-table__body">
+            <div class="specifications-table__body-item">
+              <div class="specifications-table__col">
+                Оснащение
+              </div>
+              <div class="specifications-table__col">
+                электрооборудование, звонок
+              </div>
+            </div>
+            <div class="specifications-table__body-item">
+              <div class="specifications-table__col">
+                Вес
+              </div>
+              <div class="specifications-table__col">
+                25 кг
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <img class="specifications__img" src="images/specifications.svg" alt="">
+    </div>
+  </div>
+
   <div class="gallery container">
     <div class="gallery-slider">
       <div class="gallery-slider__item">
@@ -102,6 +308,8 @@
       </div>
     </div>
   </div>
+
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
