--- a/index.html
+++ b/index.html
@@ -35,6 +35,33 @@
     </div>
   </header>
 
+  <section class="intro container">
+    <div class="intro__info">
+      <div class="intro__title">
+        Xiaomi Himo C26
+      </div>
+      <div class="intro__subtitle">
+        Электрический велосипед
+      </div>
+      <div class="intro__body">
+        <p>
+          Полная свобода передвижения и надежный транспорт для путешествий на любые расстояния
+        </p>
+        <p>
+          HIMO C26 – это новый электровелосипед от Xiaomi, который создан как для езды по городу, так и бездорожью. Он имеет мощный двигатель и емкий аккумулятор, благодаря которым способен проезжать на одном заряде до 100 км, что определенно выше, чем у большинства конкурентов. А большие колеса с пневматическими шинами, дисковые тормоза, 7-скоростная трансмиссия и эргономичное сидение делают каждую поездку гораздо приятнее.
+        </p>
+        <button class="btn btn--intro">ЗАКАЗАТЬ</button>
+      </div>
+    </div>
+    <div class="intro__stats">
+      <div class="intro-slider">
+        <div>your content</div>
+        <div>your content</div>
+        <div>your content</div>
+      </div>
+    </div>
+  </section>
+
   <section class="advantages container">
     <img class="advantages__img" src="images/advantages.jpg" alt="">
     <div class="advantages__items">
@@ -308,6 +335,34 @@
       </div>
     </div>
   </div>
+
+  <footer class="footer">
+    <div class="container">
+     <div class="footer__inner">
+       <p class="copy">
+         Политика конфиденциальности
+       </p>
+       <div class="networks">
+         <a href="#">
+           <img src="images/networks-1.svg" alt="">
+         </a>
+         <a href="#">
+           <img src="images/networks-2.svg" alt="">
+         </a>
+       </div>
+       <div class="contacts">
+         <a href="#">
+           <img src="images/contacts-1.svg" alt="">
+           +38 050 677 77 77
+         </a>
+         <a href="#">
+           <img src="images/contacts-2.svg" alt="">
+           elektrobikeukr@gmail.com
+         </a>
+       </div>
+     </div>
+    </div>
+  </footer>
 
 
 
