--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 
@@ -35,29 +36,46 @@
     </div>
   </header>
 
-  <section class="intro container">
-    <div class="intro__info">
-      <div class="intro__title">
-        Xiaomi Himo C26
-      </div>
-      <div class="intro__subtitle">
-        Электрический велосипед
-      </div>
-      <div class="intro__body">
-        <p>
-          Полная свобода передвижения и надежный транспорт для путешествий на любые расстояния
-        </p>
-        <p>
-          HIMO C26 – это новый электровелосипед от Xiaomi, который создан как для езды по городу, так и бездорожью. Он имеет мощный двигатель и емкий аккумулятор, благодаря которым способен проезжать на одном заряде до 100 км, что определенно выше, чем у большинства конкурентов. А большие колеса с пневматическими шинами, дисковые тормоза, 7-скоростная трансмиссия и эргономичное сидение делают каждую поездку гораздо приятнее.
-        </p>
-        <button class="btn btn--intro">ЗАКАЗАТЬ</button>
-      </div>
-    </div>
-    <div class="intro__stats">
-      <div class="intro-slider">
-        <div>your content</div>
-        <div>your content</div>
-        <div>your content</div>
+  <section class="bike">
+    <div class="container">
+      <div class="bike__inner">
+        <div class="bike__column">
+          <h1 class="bike__title">Xiaomi Himo C26</h1>
+          <h3 class="bike__subtitle">Электрический велосипед</h3>
+          <p class="bike__text">
+            Полная свобода передвижения и надежный транспорт для путешествий на любые расстояния
+          </p>
+          <p class="bike__text">
+            HIMO C26 – это новый электровелосипед от Xiaomi, который создан как для езды по городу, так и бездорожью. Он имеет мощный двигатель и емкий аккумулятор, благодаря которым способен проезжать на одном заряде до 100 км, что определенно выше, чем у большинства конкурентов. А большие колеса с пневматическими шинами, дисковые тормоза, 7-скоростная трансмиссия и эргономичное сидение делают каждую поездку гораздо приятнее.
+          </p>
+          <a href="#" class="bike__link">ЗАКАЗАТЬ</a>
+        </div>
+        <div class="bike__column bike__column-slider">
+          <div class="bike-slider">
+            <img src="images/bike-1.jpg" alt="" class="bike-slider__item">
+            <img src="images/bike-2.jpg" alt="" class="bike-slider__item">
+            <img src="images/bike-3.jpg" alt="" class="bike-slider__item">
+            <img src="images/bike-4.jpg" alt="" class="bike-slider__item">
+          </div>
+          <ul class="bike__list">
+            <li class="bike__list-item">
+               <span class="bike__list-num">до 100 км</span>
+              <span class="bike__list-text">Запас хода</span>
+            </li>
+            <li class="bike__list-item">
+              <span class="bike__list-num">25 км/ч</span>
+              <span class="bike__list-text">Макс скорость</span>
+              </li>
+            <li class="bike__list-item">
+              <span class="bike__list-num">3 режима езды</span>
+              <span class="bike__list-text">механический, гибридный, электрический</span>
+              </li>
+            <li class="bike__list-item">
+              <span class="bike__list-num">25 кг</span>
+              <span class="bike__list-text">вес</span>
+              </li>
+          </ul>
+        </div>
       </div>
     </div>
   </section>
