start order section

--- a/index.html
+++ b/index.html
@@ -354,6 +354,33 @@
     </div>
   </div>
 
+  <section class="order container">
+    <form class="order__form">
+      <h5 class="order__title">Заказать</h5>
+      <p class="order__text">Если Вы хотите заказать велосипед, оставьте свой контакт и наш менеджер перезвонит вам в ближайшее время</p>
+      <input class="order__input" type="text" placeholder="имя" />
+      <input class="order__input" type="text" placeholder="телефон" />
+      <p class="order__choice-text">
+        выберите желаемый цвет
+      </p>
+      <div class="order__labels">
+        <label class="order__label">
+          <input class="check-box" type="checkbox" />
+        </label>
+        <label class="order__label white">
+          <input class="check-box" type="checkbox" />
+        </label>
+        <label class="order__label red">
+          <input class="check-box" type="checkbox" />
+        </label>
+      </div>
+      <a href="#" class="bike__link">ЗАКАЗАТЬ</a>
+    </form>
+    <img src="images/order-1.jpg" alt="">
+
+
+  </section>
+
   <footer class="footer">
     <div class="container">
      <div class="footer__inner">
