--- a/index.html
+++ b/index.html
@@ -354,31 +354,51 @@
     </div>
   </div>
 
-  <section class="order container">
-    <form class="order__form">
-      <h5 class="order__title">Заказать</h5>
-      <p class="order__text">Если Вы хотите заказать велосипед, оставьте свой контакт и наш менеджер перезвонит вам в ближайшее время</p>
-      <input class="order__input" type="text" placeholder="имя" />
-      <input class="order__input" type="text" placeholder="телефон" />
-      <p class="order__choice-text">
-        выберите желаемый цвет
-      </p>
-      <div class="order__labels">
-        <label class="order__label">
-          <input class="check-box" type="checkbox" />
-        </label>
-        <label class="order__label white">
-          <input class="check-box" type="checkbox" />
-        </label>
-        <label class="order__label red">
-          <input class="check-box" type="checkbox" />
-        </label>
+  <section class="price">
+    <div class="container">
+      <div class="price__inner">
+        <form class="form">
+          <h4 class="form__title">
+            Заказать
+          </h4>
+          <p class="form__text">
+            Если Вы хотите заказать велосипед, оставьте свой контакт и наш менеджер перезвонит вам в ближайшее время
+          </p>
+          <input class="form__input-name" type="text" placeholder="имя">
+          <input class="form__input-phone" type="tel" placeholder="телефон">
+          <p class="form-input__text">
+            выберите желаемый цвет
+          </p>
+          <div class="form__label-box">
+            <label class="form__label">
+              <input class="form__input-radio" type="radio" name="radio">
+              <div class="form__bike">
+                <img class="form__bike-img" src="images/bike-grey.jpg" alt="">
+                <p class="form__bike-price"><span>33999 грн.</span></p>
+              </div>
+              <div class="form__radio-style form__radio-style--grey"></div>
+            </label>
+            <label class="form__label">
+              <input class="form__input-radio" type="radio" name="radio" checked><span></span>
+              <div class="form__bike">
+                <img class="form__bike-img" src="images/bike-white.jpg" alt="">
+                <p class="form__bike-price"><span>32999 грн.</span></p>
+              </div>
+              <div class="form__radio-style form__radio-style--white"></div>
+            </label>
+            <label class="form__label">
+              <input class="form__input-radio" type="radio" name="radio">
+              <div class="form__bike">
+                <img class="form__bike-img" src="images/bike-red.jpg" alt="">
+                <p class="form__bike-price"><span>35999 грн.</span></p>
+              </div>
+              <div class="form__radio-style form__radio-style--red"></div>
+            </label>
+          </div>
+          <a href="#" class="bike__link">ЗАКАЗАТЬ</a>
+        </form>
       </div>
-      <a href="#" class="bike__link">ЗАКАЗАТЬ</a>
-    </form>
-    <img src="images/order-1.jpg" alt="">
-
-
+    </div>
   </section>
 
   <footer class="footer">
