--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
               <div class="form__radio-style form__radio-style--grey"></div>
             </label>
             <label class="form__label">
-              <input class="form__input-radio" type="radio" name="radio" checked><span></span>
+              <input class="form__input-radio" type="radio" name="radio" checked>
               <div class="form__bike">
                 <img class="form__bike-img" src="images/bike-white.jpg" alt="">
                 <p class="form__bike-price"><span>32999 грн.</span></p>
